Fix word wrap issues in tables and show pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -691,17 +691,15 @@ div.dataTables_filter input {
 }
 
 .table-word-wrap {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
   -ms-word-break: break-all;
-
-  /* Be VERY careful with this, breaks normal words wh_erever */
-  word-break: break-all;
-
-  /* Non standard for webkit */
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  // word-break: break-all;
+  /* Instead use this non-standard one: */
   word-break: break-word;
-
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
 }
 
 .tab-pane > p {
